--- a/view/db_backup_view.xml
+++ b/view/db_backup_view.xml
@@ -120,6 +120,16 @@
         </field>
     </record>
 
+    <!-- Execute backup from "More" menu -->
+    <record id="action_cleanup_backup" model="ir.actions.server">
+        <field name="name">Cleanup(s)</field>
+        <field name="model_id" ref="model_db_backup"/>
+        <field name="code">
+            object.cleanup()
+        </field>
+    </record>
+
+
     <record model="ir.values" id="action_backup">
         <field name="name">Execute backup(s)</field>
         <field name="action_id" ref="action_server_backup" />
@@ -131,5 +141,18 @@
         <field name="model">db.backup</field>
         <field name="key2">client_action_multi</field>
     </record>
+
+    <record model="ir.values" id="cleanup">
+        <field name="name">Cleanup(s)</field>
+        <field name="action_id" ref="action_cleanup_backup" />
+        <field
+            name="value"
+            eval="'ir.actions.server,%d' % ref('action_cleanup_backup')" />
+        <field name="key">action</field>
+        <field name="model_id" ref="model_db_backup" />
+        <field name="model">db.backup</field>
+        <field name="key2">client_action_multi</field>
+    </record>
+    
 </data>
 </openerp>
